syntax = "proto3";

package herro;

service Herro {
    rpc SayHerro(HerroRequest) returns (HerroResponse);
}

message HerroRequest {
    string name = 1;
}

message HerroResponse {
    string greeting = 1;
}

message CountResponse {
    int64 count = 1;
}

service Admin {
    rpc GetRequestCount(GetCountRequest) returns (CounterResponse);
}

message GetCountRequest {}

message CounterResponse {
    uint64 count = 1;
}
